--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sign_in_button: ^3.2.0
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
