--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
   provider: ^6.1.2
+  responsive_framework: ^1.4.0
+  flutter_dotenv: ^5.1.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
