--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   responsive_framework: ^1.4.0
   flutter_dotenv: ^5.1.0
   http: ^1.2.1
+  calendar_view: ^1.2.0
+  flutter_otp_text_field: ^1.1.3+2
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.19.5
 
 dev_dependencies:
   flutter_test:
