--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_otp_text_field: ^1.1.3+2
   google_sign_in: ^6.2.1
   firebase_auth: ^4.19.5
+  intl_phone_field: ^3.2.0
+  google_sign_in_web: ^0.12.4
+  popover: ^0.3.0+1
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +78,8 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/logos/g-logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
