--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   intl_phone_field: ^3.2.0
   google_sign_in_web: ^0.12.4
   popover: ^0.3.0+1
+  expandable: ^5.0.1
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
