--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,6 +39,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Our app needs access to your photo library to allow you to select a profile picture. This helps personalize your experience and represent your identity within the app.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Our app requires access to your camera to enable you to take new photos directly from the app for updating your profile picture or adding content to your account.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Access to the microphone is needed to record audio when capturing videos within the app, enhancing your ability to share and engage with content.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
