--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   popover: ^0.3.0+1
   expandable: ^5.0.1
   cloud_firestore: ^4.17.4
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.7
+  path_provider: ^2.1.3
+  libphonenumber: ^2.0.2
 
 dev_dependencies:
   flutter_test:
