--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_storage: ^11.7.7
   path_provider: ^2.1.3
   libphonenumber: ^2.0.2
+  uuid: ^4.4.0
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
